--- a/index.html
+++ b/index.html
@@ -2,33 +2,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="author" content="parth kakadiya" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kakadiya Vada Pav Food Zone</title>
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
-    <header>
-      <h1>Welcome to The Kakadiya Vada Pav Food Zone</h1>
-      <nav>
-        <ul>
+    <header class="header">
+      <h1 class="header__h1">Welcome to The Kakadiya Vada Pav Food Zone</h1>
+      <nav class="header__nav">
+        <ul class="header__ul">
           <li>
-            <a href="#about">About</a>
+            <a href="#menu">Menu</a>
           </li>
           <li>
-            <a href="#menu">Our Menu</a>
+            <a href="hours.html">Hours</a>
           </li>
           <li>
-            <a href="hours.html">Store Hours</a>
+            <a href="contact.html">Contact</a>
           </li>
           <li>
-            <a href="contact.html">Contact Us</a>
+            <a href="about.html">About</a>
           </li>
         </ul>
       </nav>
-      <figure>
-        <img src="" alt="" title="we love vada pav!" width="400" height="267" />
-        <figcaption>Vada pav and a SOSYO</figcaption>
-      </figure>
     </header>
+    <section>
+      <figure>
+        <img
+          src="./img/vada-pav.png"
+          alt="vadapav"
+          title="we love vada pav!"
+          width="400"
+          height="267"
+        />
+        <figcaption>Bombay ki shaan Vada pav</figcaption>
+      </figure>
+    </section>
     <main>
       <article id="about">
         <h2>About</h2>
