structuring is done yet

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Kakadiya Vada Pav Food Zone</title>
     <link rel="stylesheet" href="./css/index.css" />
   </head>
+
   <body>
     <header class="header">
       <h1 class="header__h1">Welcome to The Kakadiya Vada Pav Food Zone</h1>
@@ -27,18 +28,21 @@
         </ul>
       </nav>
     </header>
-    <section>
+
+    <section class="hero">
+      <h2 class="hero__h2">नमस्ते</h2>
       <figure>
         <img
-          src="./img/vada-pav.png"
+          src="./img/vada-pav_950x577.png"
           alt="vadapav"
           title="we love vada pav!"
-          width="400"
-          height="267"
+          width="950"
+          height="577"
         />
-        <figcaption>Bombay ki shaan Vada pav</figcaption>
+        <figcaption>Bombay ki shaan Vada pav!</figcaption>
       </figure>
     </section>
+
     <main>
       <article id="about">
         <h2>About</h2>
