Designing Is on its way

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <header class="header">
-      <h1 class="header__h1">Welcome to The Kakadiya Vada Pav Food Zone</h1>
+      <h1 class="header__h1">Vada Pav Food Zone</h1>
       <nav class="header__nav">
         <ul class="header__ul">
           <li>
@@ -30,7 +30,7 @@
     </header>
 
     <section class="hero">
-      <h2 class="hero__h2">नमस्ते</h2>
+      <h2 class="hero__h2">नमस्ते!</h2>
       <figure>
         <img
           src="./img/vada-pav_950x577.png"
@@ -39,26 +39,27 @@
           width="950"
           height="577"
         />
-        <figcaption>Bombay ki shaan Vada pav!</figcaption>
+        <figcaption class="offscreen">Bombay ki shaan Vada pav!</figcaption>
       </figure>
     </section>
 
     <main>
       <article id="about">
-        <h2>About</h2>
-        <p></p>
+        <h2>About <abbr title="Vada Pav Food Zone">VPFZ</abbr></h2>
+        <p>
+          <abbr title="Vada Pav Food Zone">VPFZ</abbr> first found in 2024. Our
+          shop is build from love of vadas🍔🍔🍔. we hope our shop serve unique
+          taste to our little town.
+        </p>
         <aside>
-          <h3>Vada pav Bombay</h3>
+          <h3>Vada pav मुंबई की शान</h3>
           <details>
-            <summary>
-              Porro sit in dolor facilis sequi deserunt voluptate ea dolores
-              aperiam?
-            </summary>
+            <summary>When was the first Vada Pav made?</summary>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              illo distinctio est, atque consequatur a natus rerum accusamus
-              architecto excepturi aliquam voluptate repellat, quod amet
-              molestias consequuntur incidunt adipisci quas.
+              History. The most common theory of the vada pav's origin is that
+              it was invented in the erstwhile mill-heartland of Central Mumbai.
+              Ashok Vaidya of Dadar is often credited with starting the first
+              vada pav stall outside Dadar railway station in 1966.
             </p>
           </details>
         </aside>
