Animation is done

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <ul class="header__ul">
           <li><a href="/Food-Website/">Home</a></li>
           <li>
-            <a href="/#menu">Menu</a>
+            <a href="/Food-Website/#menu">Menu</a>
           </li>
           <li>
             <a href="hours.html">Hours</a>
