--- a/hours.html
+++ b/hours.html
@@ -16,7 +16,7 @@
             <a href="/Food-Website/">Home</a>
           </li>
           <li>
-            <a href="/#menu">Menu</a>
+            <a href="/Food-Website/#menu">Menu</a>
           </li>
 
           <li>
