Working still on designing part

--- a/about.html
+++ b/about.html
@@ -38,8 +38,33 @@
         <figcaption class="offscreen">Try this super spicy vada-pav</figcaption>
       </figure>
     </section>
-    <footer>
-      <p>Copyright &copy; The Kakadiya Vadapav Food Zone</p>
+    <main>
+      <article id="about">
+        <h2>About <abbr title="Vada Pav Food Zone">VPFZ</abbr></h2>
+        <p>
+          <abbr title="Vada Pav Food Zone">VPFZ</abbr> first found in 2024. Our
+          shop is build from love of vadas🍔🍔🍔. we hope our shop serve unique
+          taste to our little town.
+        </p>
+        <aside>
+          <h3>Vada pav मुंबई की शान</h3>
+          <details>
+            <summary>When was the first Vada Pav made?</summary>
+            <p>
+              History. The most common theory of the vada pav's origin is that
+              it was invented in the erstwhile mill-heartland of Central Mumbai.
+              Ashok Vaidya of Dadar is often credited with starting the first
+              vada pav stall outside Dadar railway station in 1966.
+            </p>
+          </details>
+        </aside>
+      </article>
+    </main>
+    <footer class="footer">
+      <p>
+        <span class="nowrap">Copyright &copy;</span>
+        <span class="nowrap">Kakadiya Vadapav Food Zone</span>
+      </p>
     </footer>
   </body>
 </html>
