--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,15 @@
         <figcaption class="offscreen">Bombay Style Vada Pav</figcaption>
       </figure>
     </section>
-    <main>
-      <section>
+    <main class="main">
+      <article class="main__article">
+        <h2>Our Location</h2>
+        <address>
+          Zopauer Str. 12, Bernsdorf Chemnitz City, MO 444444-5555 Phone:
+          <a href="tel: +4444445555">444-444-5555</a>
+        </address>
+      </article class="main__article">
+      <article>
         <h2>Our Contact Form</h2>
         <form action="https://httpbin.org/get" method="get">
           <fieldset>
@@ -81,17 +88,14 @@
           <button type="submit">Send</button>
           <button type="reset">Reset</button>
         </form>
-      </section>
-      <section>
-        <h2>Our Location</h2>
-        <address>
-          Zopauer Str. 12, Bernsdorf Chemnitz City, MO 444444-5555 Phone:
-          <a href="tel: +4444445555">444-444-5555</a>
-        </address>
-      </section>
+      </article>
+      
     </main>
-    <footer>
-      <p>Copyright &copy; The Kakadiya Vadapav Food Zone</p>
+    <footer class="footer">
+      <p>
+        <span class="nowrap">Copyright &copy;</span>
+        <span class="nowrap">Kakadiya Vadapav Food Zone</span>
+      </p>
     </footer>
   </body>
 </html>
