--- a/hours.html
+++ b/hours.html
@@ -42,17 +42,24 @@
       </figure>
     </section>
 
-    <main>
-      <p>We are open 7 daya a week!</p>
-      <dl>
-        <dt>Sunday-Thursday</dt>
-        <dd>11am-9pm</dd>
-        <dt>Friday-Saturday</dt>
-        <dd>11am-11pm</dd>
-      </dl>
-      <p><a href="#">Back to Top</a></p>
+    <main class="main">
+      <article class="main__article">
+        <p>We are open 7 daya a week!</p>
+        <dl>
+          <dt>Sunday-Thursday</dt>
+          <dd>11am-9pm</dd>
+          <dt>Friday-Saturday</dt>
+          <dd>11am-11pm</dd>
+        </dl>
+        <p><a href="#">Back to Top</a></p>
+      </article>
     </main>
 
-    <footer>Copyright &copy; The Kakadiya Vadapav Food Zone</footer>
+    <footer class="footer">
+      <p>
+        <span class="nowrap">Copyright &copy;</span>
+        <span class="nowrap">Kakadiya Vadapav Food Zone</span>
+      </p>
+    </footer>
   </body>
 </html>
