--- a/index.html
+++ b/index.html
@@ -43,28 +43,8 @@
       </figure>
     </section>
 
-    <main>
-      <article id="about">
-        <h2>About <abbr title="Vada Pav Food Zone">VPFZ</abbr></h2>
-        <p>
-          <abbr title="Vada Pav Food Zone">VPFZ</abbr> first found in 2024. Our
-          shop is build from love of vadas🍔🍔🍔. we hope our shop serve unique
-          taste to our little town.
-        </p>
-        <aside>
-          <h3>Vada pav मुंबई की शान</h3>
-          <details>
-            <summary>When was the first Vada Pav made?</summary>
-            <p>
-              History. The most common theory of the vada pav's origin is that
-              it was invented in the erstwhile mill-heartland of Central Mumbai.
-              Ashok Vaidya of Dadar is often credited with starting the first
-              vada pav stall outside Dadar railway station in 1966.
-            </p>
-          </details>
-        </aside>
-      </article>
-      <article id="menu">
+    <main class="main">
+      <article id="main__article">
         <h2>Our Menu</h2>
         <table>
           <caption>
@@ -116,8 +96,11 @@
         </p>
       </article>
     </main>
-    <footer>
-      <p>Copyright &copy; The Kakadiya Vadapav Food Zone</p>
+    <footer class="footer">
+      <p>
+        <span class="nowrap">Copyright &copy;</span>
+        <span class="nowrap">Kakadiya Vadapav Food Zone</span>
+      </p>
     </footer>
   </body>
 </html>
