Application is done

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/index.css" />
-    <title>About VPFZ</title>
+    <title>About The Kakadiya Vadapav Food Zone</title>
   </head>
   <body>
     <header class="header">
@@ -38,19 +38,19 @@
         <figcaption class="offscreen">Try this super spicy vada-pav</figcaption>
       </figure>
     </section>
-    <main>
-      <article id="about">
+    <main class="main">
+      <article id="about" class="main__article about">
         <h2>About <abbr title="Vada Pav Food Zone">VPFZ</abbr></h2>
         <p>
           <abbr title="Vada Pav Food Zone">VPFZ</abbr> first found in 2024. Our
           shop is build from love of vadas🍔🍔🍔. we hope our shop serve unique
           taste to our little town.
         </p>
-        <aside>
+        <aside class="about__mumbai">
           <h3>Vada pav मुंबई की शान</h3>
           <details>
             <summary>When was the first Vada Pav made?</summary>
-            <p>
+            <p class="about__mumbai-answer">
               History. The most common theory of the vada pav's origin is that
               it was invented in the erstwhile mill-heartland of Central Mumbai.
               Ashok Vaidya of Dadar is often credited with starting the first
