--- a/contact.html
+++ b/contact.html
@@ -45,18 +45,24 @@
       <article class="main__article">
         <h2>Our Location</h2>
         <address>
-          Zopauer Str. 12, Bernsdorf Chemnitz City, MO 444444-5555 Phone:
-          <a href="tel: +4444445555">444-444-5555</a>
+          Zopauer Str. 12, Bernsdorf<br />Chemnitz City, MO 444444-5555
+          <br /><br />
+          Phone: <a href="tel: +4444445555">444-444-5555</a>
         </address>
-      </article class="main__article">
-      <article>
-        <h2>Our Contact Form</h2>
-        <form action="https://httpbin.org/get" method="get">
-          <fieldset>
-            <legend>Send Us A Message</legend>
-            <p>
-              <label for="name">Name:</label>
+      </article>
+      <article class="main__article contact">
+        <h2 class="contact__h2">Our Contact Form</h2>
+        <form
+          action="https://httpbin.org/get"
+          method="get"
+          class="contact__form"
+        >
+          <fieldset class="contact__fieldset">
+            <legend class="offscreen">Send Us A Message</legend>
+            <p class="contact__p">
+              <label class="contact__label" for="name">Name:</label>
               <input
+                class="contact__input"
                 type="text"
                 name="name"
                 id="name"
@@ -64,9 +70,10 @@
                 required
               />
             </p>
-            <p>
-              <label for="email">Email:</label>
+            <p class="contact__p">
+              <label class="contact__label" for="email">Email:</label>
               <input
+                class="contact__input"
                 type="email"
                 name="email"
                 id="email"
@@ -74,9 +81,10 @@
                 required
               />
             </p>
-            <p>
-              <label for="message">Your Message:</label>
+            <p class="contact__p">
+              <label class="contact__label" for="message">Your Message:</label>
               <textarea
+                class="contact__textarea"
                 name="message"
                 id="message"
                 cols="30"
@@ -85,11 +93,10 @@
               ></textarea>
             </p>
           </fieldset>
-          <button type="submit">Send</button>
-          <button type="reset">Reset</button>
+          <button class="contact__button" type="submit">Send</button>
+          <button class="contact__button" type="reset">Reset</button>
         </form>
       </article>
-      
     </main>
     <footer class="footer">
       <p>
