--- a/hours.html
+++ b/hours.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="header__h1">Welcome to The Kakadiya Vada Pav Food Zone</h1>
+      <h1 class="header__h1">Vada Pav Food Zone</h1>
       <nav class="header__nav">
         <ul class="header__ul">
           <li>
