--- a/index.html
+++ b/index.html
@@ -44,54 +44,58 @@
     </section>
 
     <main class="main">
-      <article id="main__article">
-        <h2>Our Menu</h2>
-        <table>
-          <caption>
+      <article id="menu" class="main__article menu">
+        <h2 class="menu__h2">Our Menu</h2>
+        <table class="menu__container">
+          <caption class="offscreen">
             Our VadaPav
           </caption>
           <thead>
             <tr>
-              <th>vada Pav</th>
-              <th>Qty</th>
-              <th>Price</th>
+              <th class="menu__header" scope="col">vada Pav</th>
+              <th class="menu__header" scope="col">Quantity</th>
+              <th class="menu__header" scope="col">Price</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <th scope="row" rowspan="3">Fried</th>
-              <td>1</td>
-              <td>20₹</td>
+              <th scope="row" rowspan="3" class="menu__item menu__fr">Fried</th>
+              <td class="menu__item">1</td>
+              <td class="menu__item">20₹</td>
             </tr>
             <tr>
-              <td>2</td>
-              <td>35₹</td>
+              <td class="menu__item">2</td>
+              <td class="menu__item">35₹</td>
             </tr>
             <tr>
-              <td>3</td>
-              <td>50₹</td>
+              <td class="menu__item">3</td>
+              <td class="menu__item">50₹</td>
             </tr>
             <tr>
-              <th scope="row" rowspan="3">Chesse</th>
-              <td>1</td>
-              <td>40₹</td>
+              <th scope="row" rowspan="3" class="menu__item menu__ch">
+                Chesse
+              </th>
+              <td class="menu__item">1</td>
+              <td class="menu__item">40₹</td>
             </tr>
             <tr>
-              <td>2</td>
-              <td>75₹</td>
+              <td class="menu__item">2</td>
+              <td class="menu__item">75₹</td>
             </tr>
             <tr>
-              <td>3</td>
-              <td>110₹</td>
+              <td class="menu__item">3</td>
+              <td class="menu__item">110₹</td>
             </tr>
           </tbody>
           <tfoot>
             <tr>
-              <td colspan="3">Extra vadu &amp; SOSYO 30₹</td>
+              <td colspan="3" class="menu__item menu__vs">
+                Extra vadu &amp; SOSYO 30₹
+              </td>
             </tr>
           </tfoot>
         </table>
-        <p>
+        <p class="center">
           <a href="#">Back to Top</a>
         </p>
       </article>
