Path bugs are fix

--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
       <h1 class="header__h1">Vada Pav Food Zone</h1>
       <nav class="header__nav">
         <ul class="header__ul">
-          <li><a href="/Food-Website/">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li>
-            <a href="/Food-Website/#menu">Menu</a>
+            <a href="/#menu">Menu</a>
           </li>
           <li>
             <a href="hours.html">Hours</a>
