--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
       <nav class="header__nav">
         <ul class="header__ul">
           <li>
-            <a href="/Food-Website/">Home</a>
+            <a href="/">Home</a>
           </li>
           <li>
-            <a href="/Food-Website/#menu">Menu</a>
+            <a href="/#menu">Menu</a>
           </li>
 
           <li>
