--- a/hours.html
+++ b/hours.html
@@ -44,6 +44,7 @@
 
     <main class="main">
       <article class="main__article">
+        <h2>Hours</h2>
         <p>We are open 7 daya a week!</p>
         <dl>
           <dt>Sunday-Thursday</dt>
@@ -51,15 +52,18 @@
           <dt>Friday-Saturday</dt>
           <dd>11am-11pm</dd>
         </dl>
-        <p><a href="#">Back to Top</a></p>
+        <p><a href="#" class="offscreen">Back to Top</a></p>
       </article>
     </main>
 
     <footer class="footer">
       <p>
-        <span class="nowrap">Copyright &copy;</span>
+        <span class="nowrap">Copyright &copy; <time id="year"></time> </span>
         <span class="nowrap">Kakadiya Vadapav Food Zone</span>
       </p>
     </footer>
   </body>
+  <script>
+    document.getElementById("year").innerHTML = new Date().getFullYear();
+  </script>
 </html>
