--- a/index.html
+++ b/index.html
@@ -102,9 +102,12 @@
     </main>
     <footer class="footer">
       <p>
-        <span class="nowrap">Copyright &copy;</span>
+        <span class="nowrap">Copyright &copy; <time id="year"></time> </span>
         <span class="nowrap">Kakadiya Vadapav Food Zone</span>
       </p>
     </footer>
   </body>
+  <script>
+    document.getElementById("year").innerHTML = new Date().getFullYear();
+  </script>
 </html>
